alignment fixes

--- a/src/Components/Leaderboards/Leaderboard.scss
+++ b/src/Components/Leaderboards/Leaderboard.scss
@@ -2,6 +2,9 @@
   p {
     margin: 0;
   }
+  .name {
+    width: 200px;
+  }
   .Lead-card {
     margin: 0 auto;
     width: 60%;
